# NewsAI

./: LICENSE.md  README.md
BackEnd/: README.md  pyproject.toml  requirements.txt
BackEnd/src/newsai/: crew.py  main.py
BackEnd/src/newsai/config/: agents.yaml  tasks.yaml
FrontEnd/: .dockerignore  .gitignore  Dockerfile  NewsAI.sql  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json
FrontEnd/prisma/: schema.prisma
FrontEnd/src/app/: layout.tsx  page.tsx
FrontEnd/src/app/api/articles/: route.ts
FrontEnd/src/app/api/articles/[articleId]/: route.ts
FrontEnd/src/app/api/articles/category/[categoryName]/: route.ts
FrontEnd/src/app/api/articles/read/: route.ts
FrontEnd/src/app/api/auth/[...nextauth]/: route.ts
FrontEnd/src/app/api/auth/register/: route.ts
FrontEnd/src/app/api/categories/: route.ts
FrontEnd/src/app/api/search/: route.ts
FrontEnd/src/app/articles/[articleId]/: page.tsx
FrontEnd/src/app/articles/category/[categoryName]/: page.tsx
FrontEnd/src/app/auth/register/: page.tsx
FrontEnd/src/app/auth/signin/: page.tsx
FrontEnd/src/app/categories/: page.tsx
FrontEnd/src/app/search/: page.tsx
FrontEnd/src/components/: ArticleCard.tsx  Header.tsx  MarkAsReadButton.tsx  SearchBar.tsx  ToggleReadFilterButton.tsx
FrontEnd/src/components/ThemeRegistry/: EmotionCache.tsx  theme.ts
FrontEnd/src/lib/: auth.ts  prisma.ts
FrontEnd/src/types/: next-auth.d.ts
