[project]
name = "newsai"
version = "0.1.0"
description = "newsai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "=3.12.10"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "feedparser>=6.0.11",
    "pymysql>=1.1.1",
]

[project.scripts]
newsai = "newsai.main:run"
run_crew = "newsai.main:run"
train = "newsai.main:train"
replay = "newsai.main:replay"
test = "newsai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
